setup layout module.scss and imported all layout scss. added structure variables

--- a/source/assets/css/base/_variables.scss
+++ b/source/assets/css/base/_variables.scss
@@ -8,3 +8,8 @@ $primary-green: #4e9a10;
 $light-green: #8dc63f;
 $dark-green: #113d17;
 $white: #ffffff;
+
+// Structure
+$max-width: 1024px;
+$half-width: $max-width / 2;
+$third-width: $max-width / 3;
