--- a/source/assets/css/layout/_header.scss
+++ b/source/assets/css/layout/_header.scss
@@ -1,1 +1,20 @@
+.logo {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  height: 2rem;
+}
 
+.header {
+  max-height: 350px;
+  height: 10rem;
+  background: url("/assets/img/header-bg.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.center-content {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  width: 20rem;
+}
