--- a/source/assets/css/layout/_header.scss
+++ b/source/assets/css/layout/_header.scss
@@ -5,11 +5,38 @@
   height: 2rem;
 }
 
-.header {
-  max-height: 350px;
+header {
   height: 10rem;
   background: url("/assets/img/header-bg.jpg") no-repeat center center;
   background-size: cover;
+}
+
+nav {
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    background-color: $light-green;
+    color: $white;
+    display: inline-block;
+    font-size: 0.9em;
+    margin-left: 0.5%;
+    padding: 0.5rem 0rem;
+    text-transform: uppercase;
+    text-align: center;
+    width: 33%;
+  }
+
+  li:first-child {
+    margin-left: 0%;
+  }
+
+  .active {
+    background-color: $dark-green;
+  }
 }
 
 .center-content {
