--- a/source/assets/css/layout/_nav.scss
+++ b/source/assets/css/layout/_nav.scss
@@ -1,10 +1,11 @@
 nav {
+  font-size: 0;
 
   li {
     background-color: $light-green;
     color: $white;
     display: inline-block;
-    font-size: 0.9em;
+    font-size: 0.9rem;
     list-style: none;
     margin-left: 0.5%;
     padding: 0.5rem 0rem;
