--- a/source/assets/css/base/_typography.scss
+++ b/source/assets/css/base/_typography.scss
@@ -24,3 +24,19 @@ h5 {
   font-family: $headline-font;
 }
 
+h1 {
+  font-size: 1.75rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 1rem;
+}
+
