--- a/source/assets/css/layout/_tiles.scss
+++ b/source/assets/css/layout/_tiles.scss
@@ -1,4 +1,5 @@
 .tiles {
+  margin-bottom: 2rem;
 
   .tile {
     margin: 0;
@@ -17,6 +18,6 @@
   .tile-footer {
     background-color: #f0efe8;
     padding: 1rem;
-
+    text-align: center;
   }
 }
