completed footer section and styled w/ _footer.scss

--- a/source/assets/css/layout/_related.scss
+++ b/source/assets/css/layout/_related.scss
@@ -1,9 +1,9 @@
 .related {
   font-size: 0;
   color: $dark-green;
+  margin-bottom: 2rem;
 
   img {
-
     display: inline-block;
     width: 33%;
   }
