--- a/source/assets/css/layout/_tiles.scss
+++ b/source/assets/css/layout/_tiles.scss
@@ -7,6 +7,7 @@
 
     .overlay {
       background-color: rgba(17,61,23,0.7);
+      border-radius: 0.25em;
       color: $white;
       padding: 1rem;
       margin: 0 auto;
