made mixin for border-image and imported border.png from PSD

--- a/source/assets/css/layout/_about.scss
+++ b/source/assets/css/layout/_about.scss
@@ -1,4 +1,6 @@
 .about {
+  @include border-image(1.25rem);
+
   background: url('/assets/img/learn-story.jpg') center center;
   background-size: cover;
   color: white;
