--- a/source/assets/css/layout/_tiles.scss
+++ b/source/assets/css/layout/_tiles.scss
@@ -1,5 +1,4 @@
 .tiles {
-  margin-bottom: 2rem;
 
   .tile {
     margin: 0;
@@ -18,7 +17,7 @@
 
   .tile-footer {
     background-color: #f0efe8;
-    padding: 1rem;
+    padding: 1rem 1rem 2rem 1rem;
     text-align: center;
   }
 }
