--- a/source/assets/css/base/_variables.scss
+++ b/source/assets/css/base/_variables.scss
@@ -13,3 +13,8 @@ $white: #ffffff;
 $max-width: 1024px;
 $half-width: $max-width / 2;
 $third-width: $max-width / 3;
+
+// Breakpoints
+$tablet: 768px;
+$laptop: 1024px;
+$desktop: 1440px;
