--- a/source/assets/css/base/_mixins.scss
+++ b/source/assets/css/base/_mixins.scss
@@ -6,3 +6,25 @@
   -o-border-image: url(/assets/img/border.png) 0 0 20 round;
   border-image: url(/assets/img/border.png) 0 0 20 round;
 }
+
+@mixin breakpoint($class) {
+  @if $class == phone {
+    @media (max-width: $tablet - 1) { @content; }
+  }
+
+  @else if $class == tablet {
+    @media (min-width: $tablet) { @content; }
+  }
+
+  @else if $class == laptop {
+    @media (min-width: $laptop) { @content; }
+  }
+
+  @else if $class == laptop {
+    @media (min-width: $desktop) { @content; }
+  }
+
+  @else {
+    @warn "Breakpoint mixin supports: phone, tablet, laptop, and desktop";
+  }
+}
