--- a/source/assets/css/layout/_slider.scss
+++ b/source/assets/css/layout/_slider.scss
@@ -24,6 +24,8 @@
     color: $dark-green;
     display: inline-block;
     font-size: 1rem;
+    padding-top: 1rem;
+    vertical-align: top;
     width: 50%;
 
     .suggestion {
