--- a/source/assets/css/layout/_header.scss
+++ b/source/assets/css/layout/_header.scss
@@ -7,7 +7,8 @@ header {
 .handwriting {
   display: block;
   margin: 0 auto;
-  padding-top: 3em;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   width: 20em;
 }
 
@@ -15,5 +16,5 @@ header {
   position: absolute;
   top: 1rem;
   left: 1rem;
-  height: 2rem;
+  width: 4rem;
 }
