--- a/source/assets/css/layout/_tiles.scss
+++ b/source/assets/css/layout/_tiles.scss
@@ -4,10 +4,11 @@
   .tile {
     box-sizing: border-box;
     margin: 0;
-    padding: 4rem 3rem;
+    padding: 5rem 3rem;
+    min-height: 20rem;
 
     @include breakpoint(tablet) {
-      display: inline-block;
+      display: inline-flex;
       width: 50%;
     }
 
