created inner-container mixin and used for thumbnails, slider, and related sections

--- a/source/assets/css/base/_mixins.scss
+++ b/source/assets/css/base/_mixins.scss
@@ -35,3 +35,11 @@
   max-height: $max-height;
   max-width: $max-width;
 }
+
+@mixin inner-container($width, $max-width) {
+  position: relative;
+  width: $width;
+  max-width: $max-width;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
