--- a/source/assets/css/layout/_module.scss
+++ b/source/assets/css/layout/_module.scss
@@ -1,7 +1,7 @@
 @import 'header';
 @import 'nav';
-@import 'slider';
-@import 'tiles';
+@import 'products';
+@import 'recipes';
 @import 'body';
 @import 'related';
 @import 'about';
