--- a/source/assets/css/layout/_recipes.scss
+++ b/source/assets/css/layout/_recipes.scss
@@ -1,7 +1,7 @@
-.tiles {
+.recipes {
   font-size: 0;
 
-  .tile {
+  .recipe {
     box-sizing: border-box;
     margin: 0;
     padding: 5rem 3rem;
@@ -27,7 +27,7 @@
     }
   }
 
-  .tile-footer {
+  .recipe-footer {
     background-color: #f0efe8;
     font-size: 1rem;
     padding: 1rem 1rem 2rem 1rem;
