--- a/source/assets/css/layout/_nav.scss
+++ b/source/assets/css/layout/_nav.scss
@@ -1,15 +1,13 @@
 nav {
   font-size: 0;
+  width: 100%;
 
   li {
     background-color: $light-green;
-    color: $white;
     display: inline-block;
-    font-size: 0.9rem;
     list-style: none;
     margin-left: 0.2%;
     padding: 0.5rem 0rem;
-    text-transform: uppercase;
     text-align: center;
     width: 33.2%;
   }
@@ -18,7 +16,20 @@ nav {
     margin-left: 0%;
   }
 
-  .active {
-    background-color: $dark-green;
+  li.active {
+    background-color: $primary-green;
   }
+
+  a {
+    color: $white;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+  }
+
+  .sticky-nav {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+  }
+
 }
