--- a/source/assets/css/layout/_nav.scss
+++ b/source/assets/css/layout/_nav.scss
@@ -2,6 +2,12 @@ nav {
   font-size: 0;
   width: 100%;
 
+  a {
+    color: $white;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+  }
+
   li {
     background-color: $light-green;
     display: inline-block;
@@ -19,17 +25,13 @@ nav {
   li.active {
     background-color: $primary-green;
   }
+}
 
-  a {
-    color: $white;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-  }
-
-  .sticky-nav {
-    position: fixed;
-    top: 0;
-    z-index: 2;
-  }
-
+.sticky {
+  box-shadow: 0px 2px 2px #888888;
+  background-color: $white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
