--- a/source/assets/css/layout/_about.scss
+++ b/source/assets/css/layout/_about.scss
@@ -1,16 +1,19 @@
 .about {
-  @include border-image(1rem);
-
-  background: url('/assets/img/learn-story.jpg') center center;
+  background: url('/assets/img/learn-story.jpg') center no-repeat;
   background-size: cover;
   color: white;
-  margin: 0;
   padding: 0.25rem 1rem 4rem 1rem;
+  @include border-image(1rem);
 
   h2 {
-    background-color: rgba(46, 102, 138, 0.4);
+    background-color: rgba(46, 102, 138, 0.3);
     border-radius: 0.25rem;
     width: 20rem;
     padding: 1rem;
+    line-height: 2.5rem;
+
+    @include breakpoint(tablet) {
+      width: 60%
+    }
   }
 }
