--- a/source/assets/css/base/_mixins.scss
+++ b/source/assets/css/base/_mixins.scss
@@ -18,11 +18,11 @@
 
 @mixin border-image($height) {
   border-style: solid;
-  border-width: 0px 0px $height;
-  -moz-border-image: url(/assets/img/border.png) 0 0 20 round;
-  -webkit-border-image: url(/assets/img/border.png) 0 0 20 round;
-  -o-border-image: url(/assets/img/border.png) 0 0 20 round;
-  border-image: url(/assets/img/border.png) 0 0 20 round;
+  border-width: $height 0px;
+  -moz-border-image: url(/assets/img/border.png) 40 repeat;
+  -webkit-border-image: url(/assets/img/border.png) 40 repeat;
+  -o-border-image: url(/assets/img/border.png) 40 repeat;
+  border-image: url(/assets/img/border.png) 40 repeat;
 }
 
 @mixin resp-image($max-height, $max-width) {
