fixed typo in related section. scaled font only up to 100% to prevent distortion

--- a/source/assets/css/base/_variables.scss
+++ b/source/assets/css/base/_variables.scss
@@ -6,6 +6,7 @@ $default-font-size: 18px;
 // Colors
 $primary-green: #4e9a10;
 $light-green: #8dc63f;
+$button-green: #8dc640;
 $dark-green: #113d17;
 $white: #ffffff;
 
