--- a/source/assets/css/components/_buttons.scss
+++ b/source/assets/css/components/_buttons.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: $light-green;
+  background-color: $button-green;
   border-radius: 2rem;
   padding: 0.75rem;
   text-decoration: none;
