--- a/source/assets/css/layout/_related.scss
+++ b/source/assets/css/layout/_related.scss
@@ -4,6 +4,10 @@
   padding: 2rem 1rem;
   @include inner-container(100%, 64rem);
 
+  h2 {
+    padding-left: 2rem;
+  }
+
   .product {
     display: inline-block;
     margin: 0 auto;
