update breakpoint for tablet. match thumbnail section to mock

--- a/source/assets/css/layout/_about.scss
+++ b/source/assets/css/layout/_about.scss
@@ -2,18 +2,18 @@
   background: url('/assets/img/learn-story.jpg') center no-repeat;
   background-size: cover;
   color: white;
-  padding: 0.25rem 1rem 4rem 1rem;
+  padding: 0.25rem 1rem 6rem 3rem;
   @include border-image(1rem);
 
   h2 {
-    background-color: rgba(46, 102, 138, 0.3);
+    background-color: rgba(46, 102, 138, 0.2);
     border-radius: 0.25rem;
     width: 20rem;
     padding: 1rem;
-    line-height: 2.5rem;
+    line-height: 2.75rem;
 
     @include breakpoint(tablet) {
-      width: 60%
+      width: 60%;
     }
   }
 }
